# averagers

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
averagers/: __init__.py  core.py  data.py
examples/: basic_usage.py  error_comparison.py  plot_example.py  window_size_comparison.py
tests/: test_core.py  test_data.py
