[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "averagers"
dynamic = ["version"]
description = "Tools for mean temperature estimation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kenji Fukushima", email = "kfuku52@gmail.com" },
]
keywords = ["temperature", "meteorology", "photoperiod"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy",
    "pandas",
    "ephem",
    "matplotlib",
]

[project.optional-dependencies]
test = [
    "build",
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/kfuku52/averagers"
Repository = "https://github.com/kfuku52/averagers"
Issues = "https://github.com/kfuku52/averagers/issues"

[tool.setuptools.packages.find]
include = ["averagers*"]

[tool.setuptools.dynamic]
version = { attr = "averagers._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
